test/pos/bool04.smt2_
; Uninterpreted Sorts


; Uninterpreted Functions


; Qualifiers


; Well-formedness constraints
(wf $k1 ((bx Int)(v Int)))


; Horn constraints
(constraint (forall ((by Bool)(v1 Int)) (=> (and True True) ($k1 by v1))))
(constraint (forall ((bx Int)(v2 Int)) (=> (and True ($k1 bx v2)) (<= v2 (+ v2 1)))))
